kubernetes/apps/kubeai/kubeai-operator/app/tailscale-kubeai-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeai-tailscale-ingress
  namespace: kubeai
spec:
  ingressClassName: tailscale
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeai
            port:
              number: 80
  tls:
    - hosts:
        - kubeai-api # This will result in kubeai-api.<tailnet-name>.ts.net
