kubernetes/apps/kubeai/kubeai-operator/app/tailscale-open-webui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui-tailscale-ingress
  namespace: kubeai
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
  tls:
    - hosts:
        - open-webui # This will result in open-webui.<tailnet-name>.ts.net
